--- a/src/Pela.Cli/Pela.Cli.csproj
+++ b/src/Pela.Cli/Pela.Cli.csproj
@@ -8,7 +8,22 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="Resources\areas.txt" />
+    <None Remove="Resources\assistants.txt" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Content Include="Resources\areas.txt">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Resources\assistants.txt">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.Hosting" Version="7.0.1" />
+    <PackageReference Include="System.Linq.Async" Version="6.0.1" />
   </ItemGroup>
 
   <ItemGroup>
